aws-alb.tf

resource "aws_lb" "alb" {
  name               = "lzb-alb-project"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.public-sg.id]
  subnets            = module.vpc.public_subnets[*]
}

resource "aws_lb_target_group" "tg" {
  name     = "lzb-alb-targets"
  port     = 80
  protocol = "HTTP"
  target_type = "ip"
  deregistration_delay = "30"
  vpc_id      = module.vpc.vpc_id
}

resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}
